=================================
CHANGES for Crate Mesos Framework
=================================

Unreleased
==========

  - Use JRE from OpenJDK from
    `https://github.com/alexkasko/openjdk-unofficial-builds#openjdk-unofficial-installers-for-windows-linux-and-mac-os-x`_

  - Use custom version of OpenJDK as dependency

  - initial framework implementation
    see README.rst for usage and limitations