@@ -109,6 +109,8 @@ OPTION                       REQUIRED       DEFAULT
 --------------------------- -------------- -----------------------
 ``--resource-disk``         false          1024
 --------------------------- -------------- -----------------------
+``--framework-name``        false          crate-mesos
+--------------------------- -------------- -----------------------
 ``--framework-user``        false          crate
 --------------------------- -------------- -----------------------
 ``--framework-role``        false          *
